--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,5 @@
             "email": "80899303+mhnobakht@users.noreply.github.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
